@@ -5,9 +5,13 @@ ChangeLog
 
 CVS HEAD
 
+- ALSA PCM devices now only listed/enumerated iif strictly compliant
+  with the audio mode criteria (Duplex, Capture-only or Playback-only)
+  as kindly suggested by Nedko Ardaunov.
+
 - JACK client/port aliases may now be displayed as a global user option
   (see Setup/Display/Connections/JACK client/port aliases).
-  
+
 - Lighten up the connections line and highlight colors, as seen to fit
   best on some darker background themes.
 
